kubernetes/ingress_test/base/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ab-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: a-raphael.play.kurly.services
      http:
        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ssl-redirect
#                port:
#                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: a-deploy
                port:
                  number: 80
    - host: b-raphael.play.kurly.services
      http:
        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ssl-redirect
#                port:
#                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: b-deploy
                port:
                  number: 80
